# Rust-2D-Game-Engine

./: .gitignore  Cargo.toml  FinalReport.md  README.md  populate_project.sh  proposal.md
.github/workflows/: release.yml
demo/flappy_bird/: Cargo.toml  project.epm  project.json
demo/flappy_bird/assets/scripts/: pipe_spawner.lua  script.lua  top_pipe1.lua
demo/flappy_bird/scenes/: scene_manager.json
demo/flappy_bird/src/: main.rs
src/: audio_engine.rs  ecs.rs  engine_gui.rs  game_runtime.rs  gui.rs  input_handler.rs  interpreter.rs  lib.rs  logger.rs  lua_scripting.rs  main.rs  physics_engine.rs  project.rs  project_file_manager.rs  project_manager.rs  render_engine.rs  script_interpreter.rs  shader.wgsl
src/gui/: file_system.rs  gui_state.rs  inspector.rs  menu_bar.rs  mod.rs  predefined_entities.rs  scene_hierarchy.rs
src/gui/menus/: edit_menu.rs  file_menu.rs  import_menu.rs  mod.rs  project_menu.rs  view_menu.rs
src/gui/scene_hierarchy/: entity_item.rs  mod.rs  popup.rs  predefined_entities.rs  resource_item.rs  scene_item.rs  utils.rs
test_proj/test/: project.json
test_proj/test/entities/: 2.json  3.json  4.json
tests/: audio_engine_test.rs  ecs_test.rs  interpreter_test.rs  physics_engine_test.rs  render_engine_test.rs  renderer_test.rs  script_nterpreter_test.rs
