[package]
name = "rust-2d-game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
eframe = "0.29.1" # renderer of the engine UI
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rlua = "0.20.1"  # Lua support
wgpu = "22.1.0"  # renderer for game rendering
winit = "0.30.5"
futures = "0.3.31"  # Required for wgpu async tasks
rapier2d = "0.22.0"
rodio = "0.19.0"

[lib]
name = "rust_2d_game_engine"
path = "src/lib.rs"