[package]
name = "rust-2d-game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
eframe = "0.29.1" # renderer of the engine UI
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.128"
rlua = "0.20.1"  # Lua support
wgpu = "22.1.0"  # renderer for game rendering
winit = "0.30.5"
futures = "0.3.31"  # Required for wgpu async tasks
rapier2d = "0.22.0"
rodio = "0.19.0"
bytemuck = { version = "1.19", features = ["derive"] }
rfd = "0.15.1"
egui-wgpu = "0.29.1"
egui-winit = "0.29.1"
image = "0.25.2"
chrono = "0.4.39"
indexmap = { version = "2.2.3", features = ["serde"] }

[dev-dependencies]
mockall = "0.11"

[lib]
name = "rust_2d_game_engine"
path = "src/lib.rs"
